ops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: inventory-manager
  labels:
    name: inventory-manager
